...
        android:layout_marginBottom="12dp"
        app:passwordToggleEnabled="true"

        tools:hint="hint of the thing">

        <EditText
            android:id="@+id/incoming_server_password"
            style="@style/DarkGreyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:singleLine="true"
...
